Wed Jun 13 18:23:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver_exec.cpp:
          With RTI DDS any unkeyed sample gets handle nil, but with OpenDDS
          we get always the same handle for all samples of the same type, but
          not nil. Extended this test to handle both vendors

        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender.idl:
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor.idl:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender.idl:
        * connectors/dds4ccm/performance-tests/Keyed/Sender/Perf_Keyed_Test_Sender.idl:
        * connectors/dds4ccm/performance-tests/Latency/Sender/LatencyTT_Test_Sender.idl:
        * connectors/dds4ccm/performance-tests/Throughput/Sender/Throughput_Sender.idl:
        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender.idl:
        * connectors/dds4ccm/tests/CSLQoS/Sender/CSL_QoSTest_Sender.idl:
        * connectors/dds4ccm/tests/CSLSampleRejected/Sender/CSL_SRTest_Sender.idl:
        * connectors/dds4ccm/tests/CSLUnexpStat/Sender/CSL_USTest_Sender.idl:
        * connectors/dds4ccm/tests/CoherentUpdater/Sender/CoherentUpdate_Test_Sender.idl:
        * connectors/dds4ccm/tests/CoherentWriter/Sender/CoherentWrite_Test_Sender.idl:
        * connectors/dds4ccm/tests/ContentFilteredTopic/EventListener/Sender/CFTLE_Test_Sender.idl:
        * connectors/dds4ccm/tests/ContentFilteredTopic/ReadGet/Sender/ReadGet_Test_Sender.idl:
        * connectors/dds4ccm/tests/ContentFilteredTopic/StateListener/Sender/CFTLS_Test_Sender.idl:
        * connectors/dds4ccm/tests/DDSEntity/Sender/Writer_Sender.idl:
        * connectors/dds4ccm/tests/DoubleNestedModule/Sender/DNM_Sender.idl:
        * connectors/dds4ccm/tests/Event_Connection_Test/Sender/Event_Connection_Test_Sender.idl: