@@ -14,6 +14,7 @@ module Unkeyed_Test
   component Sender
   {
     port UnkeyedTestConnector::DDS_Write info_write;
+    provides CCM_DDS::ConnectorStatusListener test_topic_connector_status;
     attribute unsigned short rate;
     attribute unsigned short iterations;
     attribute unsigned short keys;
