@@ -45,10 +45,42 @@ namespace CIAO_Unkeyed_Test_Sender_Impl
 
   class Sender_exec_i;
 
+  //============================================================
+  // ConnectorStatusListener_exec_i
+  //============================================================
+  class SENDER_EXEC_Export ConnectorStatusListener_exec_i
+    : public virtual ::CCM_DDS::CCM_ConnectorStatusListener,
+      public virtual ::CORBA::LocalObject
+  {
+  public:
+    ConnectorStatusListener_exec_i (Sender_exec_i &callback);
+    virtual ~ConnectorStatusListener_exec_i (void);
+
+    virtual
+    void on_inconsistent_topic (::DDS::Topic_ptr the_topic,
+                                const DDS::InconsistentTopicStatus & status);
+    virtual
+    void on_requested_incompatible_qos (::DDS::DataReader_ptr the_reader,
+                                        const DDS::RequestedIncompatibleQosStatus & status);
+    virtual
+    void on_sample_rejected (::DDS::DataReader_ptr the_reader,
+                             const DDS::SampleRejectedStatus & status);
+    virtual
+      void on_offered_deadline_missed (::DDS::DataWriter_ptr the_writer,
+                                       const DDS::OfferedDeadlineMissedStatus & status);
+    virtual
+    void on_offered_incompatible_qos (::DDS::DataWriter_ptr the_writer,
+                                      const DDS::OfferedIncompatibleQosStatus & status);
+    virtual
+      void on_unexpected_status (::DDS::Entity_ptr the_entity,
+                                 ::DDS::StatusKind status_kind);
+  private:
+    Sender_exec_i &callback_;
+  };
+
   /**
    * Write action generator
    */
-
   class pulse_Generator :
     public ACE_Event_Handler
   {
@@ -92,6 +124,9 @@ namespace CIAO_Unkeyed_Test_Sender_Impl
     virtual ::CORBA::UShort keys (void);
 
     virtual void keys (::CORBA::UShort keys);
+
+    virtual ::CCM_DDS::CCM_ConnectorStatusListener_ptr
+    get_test_topic_connector_status(void);
     //@}
 
     //@{
@@ -106,7 +141,7 @@ namespace CIAO_Unkeyed_Test_Sender_Impl
     //@{
     /** User defined public operations. */
     void tick (void);
-
+    void start (void);
     //@}
 
   private:
@@ -135,9 +170,7 @@ namespace CIAO_Unkeyed_Test_Sender_Impl
 
     //@{
     /** User defined private operations. */
-    void start (void);
     void stop (void);
-
     //@}
 
     /// Get the ACE_Reactor
